Version 2.1.0, TBD
=========================

Incompatible changes:

* The deprecated AbstractMarkup API has been removed.
* Python 3.2 is no longer supported.
* The output now uses HTML5 instead of HTML4.
* The custom markups are now registered with entry points.
* The ``get_custom_markups()`` method has been removed.

Version 2.0.1, 2017-06-24
=========================

* The new MathJax CDN is used, the old one will be shut down soon.
* When using MathJax with Markdown, the AMSmath and AMSsymbols extensions are
  now enabled.

Version 2.0.0, 2016-05-09
=========================

Incompatible changes:

* Changed the API of pymarkups to clearly separate the conversion step from
  access to the various elements of the result. The old API is deprecated
  and will be removed in a future release. Please see the documentation for
  details on using the new API.
* The reStructuredText markup now includes document title and subtitle in
  the HTML body.

Other changes:

* Added a ``markup2html.py`` reference script to show API usage.
* Improved support for specifying Markdown extensions in the document.

Version 1.0.1, 2015-12-22
=========================

* The Textile markup now uses the recommended python-textile API.
* Fixed warnings during installation.
* Python-Markdown Math extension updated to the latest version.

Version 1.0, 2015-12-13
=======================

* Web module removed, as ReText no longer needs it.
* Textile markup updated to work with the latest version of Python-Textile
  module.
* The setup script now uses setuptools when it is available.
* Testsuite and documentation improvements.

Version 0.6.3, 2015-06-16
=========================

* No-change re-upload with fixed tarball and changelog.

Version 0.6.2, 2015-06-09
=========================

* Markdown markup: fixed detection of codehilite extension with options.
* Added a warning about deprecation of the markups.web module.

Version 0.6.1, 2015-04-19
=========================
