@@ -8,6 +8,7 @@ Incompatible changes:
 * The output now uses HTML5 instead of HTML4.
 * The custom markups are now registered with entry points.
 * The ``get_custom_markups()`` method has been removed.
+* New dependency: ``python-markdown-math``.
 
 Version 2.0.1, 2017-06-24
 =========================
